# agentic.moda

./: .gitignore  CLAUDE.md  DATAWORKSHOP_EXTRACTION.md  DEPLOYMENT.md  IMAGE_GENERATION_README.md  QUICK_DEPLOY.md  README.md  ROADMAP.md  SUPABASE_SETUP.md  VERCEL_DEPLOY.md  VERCEL_ENV_SETUP.md  install-missing.sh  package-lock.json  package.json  parallel-test.js  supabase-schema.sql  tailwind.config.ts  tsconfig.json
.claude/: settings.local.json
document-intelligence-temp/: core.ts
rust-engine/: Cargo.toml
rust-engine/src/: agent_orchestrator.rs  api.rs  document_processor.rs  email_processor.rs  file_watcher.rs  intelligent_search.rs  main.rs  microsoft_graph.rs  performance_monitor.rs  sec_filing_client.rs  sec_stress_test.rs  storage.rs  types.rs
scripts/: parallel-image-generation.js  test-image-generation.js
src/app/: globals.css  layout.tsx  page.tsx
src/app/architecture/: page.tsx
src/app/creative/: page.tsx
src/app/dataworkshop/: page.tsx
src/app/map/: MapStudioContent.tsx  page.tsx
src/app/test-arcgis/: page.tsx
src/components/: AuthModal.tsx  DocumentSearchInterface.tsx  LayersManager.tsx  WorkflowBuilder.tsx
src/lib/agents/: architecture-agent.ts  assistant-orchestrator.ts  langchain-tools.ts  openai-agent.ts  specialized-agents.ts
src/lib/document-intelligence/: advanced.ts  core.ts
src/lib/services/: layers-manager.ts  location-intelligence.ts  scene-config.ts
src/lib/supabase/: server.ts
src/lib/tools/: document-search-tools.ts  function-tools.ts  github-tools.ts  image-tools.ts  (+1 more)
src/types/: arcgis.d.ts
(+11 files in other folders)
