[package]
name = "ultraquery-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance document processing engine for enterprise data intelligence"

[dependencies]
# PDF Processing
pdf-extract = "0.7"
lopdf = "0.32"

# OCR Support (commented out for now - requires system libraries)
# tesseract = "0.14"
# image = "0.25"

# Office Document Processing
calamine = "0.22"  # Excel files
docx-rs = "0.4"    # Word documents

# File System Monitoring
notify = "6.1"
walkdir = "2.4"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# JSON/Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Email Processing
mailparse = "0.14"

# Database/Storage
sqlite = "0.32"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Text Processing
regex = "1.10"
unicode-segmentation = "1.10"

# HTTP Server for API
axum = { version = "0.7", features = ["multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }

# URL encoding for SEC API
urlencoding = "2.1"

# Error handling
thiserror = "1.0"

# UUID with serde support
uuid = { version = "1.6", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.8"